philly-311-citywide-meta/src/objects/PS_Fields_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of all the PS fields mapping with Salesforce fields.</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>PS Field Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Related Field API Name in Salesforce</description>
        <label>Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>PublicStuff Fields Mapping</label>
</CustomObject>